[gd_scene load_steps=15 format=3 uid="uid://c7xgjqjyr8eb4"]

[ext_resource type="Script" path="res://test/drag_and_drop/TestDragDrop.gd" id="1_5go14"]
[ext_resource type="Texture2D" uid="uid://tso2qs0ew35j" path="res://assets/Card back.png" id="2_g8crc"]
[ext_resource type="Script" path="res://types/draggable.gd" id="3_v5h0v"]
[ext_resource type="Script" path="res://types/draggable_ui.gd" id="3_vnwdd"]
[ext_resource type="Shape2D" uid="uid://b53kt7hfoptw0" path="res://scenes/standard_collision_rectangle.tres" id="4_fq5y8"]
[ext_resource type="Script" path="res://test/drag_and_drop/AlwaysDropper.gd" id="4_sxo2m"]
[ext_resource type="Script" path="res://test/drag_and_drop/NoDropper.gd" id="5_yktvt"]
[ext_resource type="Script" path="res://types/empty_spot.gd" id="6_80hli"]
[ext_resource type="Script" path="res://types/droppable.gd" id="7_tnkfv"]
[ext_resource type="Script" path="res://test/drag_and_drop/YesDropper.gd" id="8_wtjww"]
[ext_resource type="Script" path="res://test/drag_and_drop/InactiveDropper.gd" id="9_fofgs"]
[ext_resource type="Script" path="res://types/clickable.gd" id="9_xn31u"]
[ext_resource type="Script" path="res://types/droppable_ui.gd" id="9_ypkhn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sfms2"]
size = Vector2(50, 70)

[node name="Root" type="Node2D"]
script = ExtResource("1_5go14")

[node name="SmallCard" type="Node2D" parent="."]
z_index = 1
position = Vector2(150, 217)

[node name="Draggable" type="Area2D" parent="SmallCard" node_paths=PackedStringArray("controlled_node")]
script = ExtResource("3_v5h0v")
controlled_node = NodePath("..")
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="SmallCard/Draggable"]
shape = SubResource("RectangleShape2D_sfms2")
metadata/_edit_lock_ = true

[node name="DraggableUi" type="Node" parent="SmallCard/Draggable"]
script = ExtResource("3_vnwdd")

[node name="Sprite2D" type="Sprite2D" parent="SmallCard"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_g8crc")
metadata/_edit_lock_ = true

[node name="Card" type="Node2D" parent="."]
position = Vector2(100, 158)

[node name="Draggable" type="Area2D" parent="Card" node_paths=PackedStringArray("controlled_node")]
script = ExtResource("3_v5h0v")
controlled_node = NodePath("..")
add_ui = true
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Card/Draggable"]
shape = ExtResource("4_fq5y8")
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="Card"]
texture = ExtResource("2_g8crc")
metadata/_edit_lock_ = true

[node name="Droppers" type="Node2D" parent="."]

[node name="AlwaysDropper" type="Node2D" parent="Droppers"]
position = Vector2(414, 302)
script = ExtResource("4_sxo2m")

[node name="EmptySpot" type="Node2D" parent="Droppers/AlwaysDropper"]
script = ExtResource("6_80hli")
type = 1
color = Color(0, 1, 0, 1)
metadata/_edit_lock_ = true

[node name="Droppable" type="Area2D" parent="Droppers/AlwaysDropper" node_paths=PackedStringArray("controlled_node")]
script = ExtResource("7_tnkfv")
controlled_node = NodePath("..")
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Droppers/AlwaysDropper/Droppable"]
shape = ExtResource("4_fq5y8")
metadata/_edit_lock_ = true

[node name="DroppableUI" type="Node" parent="Droppers/AlwaysDropper/Droppable"]
script = ExtResource("9_ypkhn")

[node name="NoDropper" type="Node2D" parent="Droppers"]
position = Vector2(480, 212)
script = ExtResource("5_yktvt")

[node name="EmptySpot" type="Node2D" parent="Droppers/NoDropper"]
script = ExtResource("6_80hli")
type = 4
color = Color(0.584314, 0.0666667, 0.121569, 1)
metadata/_edit_lock_ = true

[node name="Droppable" type="Area2D" parent="Droppers/NoDropper" node_paths=PackedStringArray("controlled_node")]
script = ExtResource("7_tnkfv")
controlled_node = NodePath("..")
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Droppers/NoDropper/Droppable"]
shape = ExtResource("4_fq5y8")
metadata/_edit_lock_ = true

[node name="YesDropper" type="Node2D" parent="Droppers"]
position = Vector2(356, 209)
script = ExtResource("8_wtjww")

[node name="EmptySpot" type="Node2D" parent="Droppers/YesDropper"]
script = ExtResource("6_80hli")
type = 3
color = Color(1, 1, 0, 1)
metadata/_edit_lock_ = true

[node name="Droppable" type="Area2D" parent="Droppers/YesDropper" node_paths=PackedStringArray("controlled_node")]
script = ExtResource("7_tnkfv")
controlled_node = NodePath("..")
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Droppers/YesDropper/Droppable"]
shape = ExtResource("4_fq5y8")
metadata/_edit_lock_ = true

[node name="InactiveDropper" type="Node2D" parent="Droppers"]
position = Vector2(411, 111)
script = ExtResource("9_fofgs")

[node name="EmptySpot" type="Node2D" parent="Droppers/InactiveDropper"]
script = ExtResource("6_80hli")
type = 2
color = Color(0.411765, 0.411765, 0.411765, 1)
metadata/_edit_lock_ = true

[node name="Droppable" type="Area2D" parent="Droppers/InactiveDropper" node_paths=PackedStringArray("controlled_node")]
script = ExtResource("7_tnkfv")
controlled_node = NodePath("..")
active = false
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Droppers/InactiveDropper/Droppable"]
shape = ExtResource("4_fq5y8")
metadata/_edit_lock_ = true

[node name="Clickable" type="Area2D" parent="Droppers/InactiveDropper"]
script = ExtResource("9_xn31u")
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Droppers/InactiveDropper/Clickable"]
shape = ExtResource("4_fq5y8")

[connection signal="received_drop" from="Droppers/AlwaysDropper/Droppable" to="Droppers/AlwaysDropper" method="_on_droppable_received_drop"]
[connection signal="received_drop" from="Droppers/NoDropper/Droppable" to="Droppers/NoDropper" method="_on_droppable_received_drop"]
[connection signal="received_drop" from="Droppers/YesDropper/Droppable" to="Droppers/YesDropper" method="_on_droppable_received_drop"]
[connection signal="received_drop" from="Droppers/InactiveDropper/Droppable" to="Droppers/InactiveDropper" method="_on_droppable_received_drop"]
[connection signal="click" from="Droppers/InactiveDropper/Clickable" to="Droppers/InactiveDropper" method="_on_clickable_click"]
